# agent-cli-builder

./: .gitignore  CHANGELOG.md  LICENSE  README.md
docs/install/: claude-code.md  codex.md  cursor.md  gemini-cli.md  manual.md  opencode.md
skills/agent-cli-builder/: SKILL.md
skills/agent-cli-builder/evals/: eval_prompts.json  verify_scaffold.py
skills/agent-cli-builder/references/: auth_strategies.md  build_path.md  cold_start_research.md  command_registry.md  evaluation.md  input_and_payloads.md  mcp_layer.md  output_contract.md  retrofit_playbook.md  safety_and_async.md  shipping_skills.md  template_recipes.md  think_like_an_agent.md
skills/agent-cli-builder/scripts/: scaffold.py
skills/agent-cli-builder/templates/: RECIPES.md
skills/agent-cli-builder/templates/python-typer/: README.md  pyproject.toml
skills/agent-cli-builder/templates/python-typer/skills/mycli/: SKILL.md
skills/agent-cli-builder/templates/python-typer/src/mycli/: __init__.py  __main__.py  async_tasks.py  cli.py  errors.py  http.py  output.py  validation.py
skills/agent-cli-builder/templates/rust-clap/: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
skills/agent-cli-builder/templates/rust-clap/crates/mycli-cli/: Cargo.toml
skills/agent-cli-builder/templates/rust-clap/crates/mycli-cli/src/: cli.rs  main.rs
skills/agent-cli-builder/templates/rust-clap/crates/mycli-cli/src/commands/: hello.rs  mod.rs  schema.rs  task.rs
skills/agent-cli-builder/templates/rust-clap/crates/mycli-core/: Cargo.toml
skills/agent-cli-builder/templates/rust-clap/crates/mycli-core/src/: async_tasks.rs  errors.rs  http.rs  lib.rs  output.rs  schemas.rs  validation.rs
skills/agent-cli-builder/templates/rust-clap/skills/mycli/: SKILL.md
