[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mycli"
version = "0.1.0"
description = "An agent-native command-line interface."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
mycli = "mycli.cli:_wrap_main"

[tool.hatch.build.targets.wheel]
packages = ["src/mycli"]
