[package]
name = "mycli-cli"
description = "Agent-native CLI binary built on top of mycli-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "mycli"
path = "src/main.rs"

[dependencies]
mycli-core = { path = "../mycli-core" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
strsim = { workspace = true }
