[package]
name = "mycli-core"
description = "Core library for the mycli agent-native CLI. Output envelope, error taxonomy, validation, HTTP client, async tasks, and JSON Schema export."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
strsim = { workspace = true }
# `dirs` is in workspace dependencies but not pulled in here — the slim
# template doesn't need it. Add `dirs = { workspace = true }` when you wire
# a file-backed TaskStore. See references/template_recipes.md for an example.

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
